Fix disabling shields, Lither Charge improvements & Lither Charge entity type, and fix translations...